--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-.env
 # testing
 /coverage
 
@@ -18,11 +17,10 @@
 .env.test.local
 .env.production.local
 
-/server/.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-node_modules
-server/node_modules
+# Ignore server node_modules
+/server/node_modules/
